--- a/k8s/helm-values/values-bookinfo-uat-ratings.yaml
+++ b/k8s/helm-values/values-bookinfo-uat-ratings.yaml
@@ -1,10 +1,10 @@
 ratings:
-  namespace: student108-bookinfo-uat
+  namespace: bank-bookinfo-uat
   image: ghcr.io/bankhubjar/bookinfo-ratings
   tag: uat
   replicas: 1
   imagePullSecrets: registry-bookinfo
-  port: 8080
+  port: 8081
   healthCheckPath: "/health"
   mongodbPasswordExistingSecret: bookinfo-uat-ratings-mongodb-secret
 ingress:
