--- a/k8s/helm-values/values-bookinfo-prd-ratings.yaml
+++ b/k8s/helm-values/values-bookinfo-prd-ratings.yaml
@@ -1,10 +1,10 @@
 ratings:
-  namespace: student108-bookinfo-prd
+  namespace: bank-bookinfo-prd
   image: ghcr.io/bankhubjar/bookinfo-ratings
   tag: prd
   replicas: 1
   imagePullSecrets: registry-bookinfo
-  port: 8080
+  port: 8081
   healthCheckPath: "/health"
   mongodbPasswordExistingSecret: bookinfo-prd-ratings-mongodb-secret
 ingress:
