--- a/k8s/helm/templates/ratings-ingress.yaml
+++ b/k8s/helm/templates/ratings-ingress.yaml
@@ -1,23 +1,44 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  {{- if .Values.ingress.annotations }}
+  name: bookinfo-ratings-bank
   annotations:
-  {{- range $key, $value := .Values.ingress.annotations }}
-    {{ $key }}: {{ $value | quote }}
-  {{- end }}
-  {{- end }}
-  name: {{ .Release.Name }}
-  namespace: {{ .Values.ratings.namespace }}
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    kubernetes.io/ingress.class: azure/application-gateway
+    appgw.ingress.kubernetes.io/health-probe-path: "/health"
+    appgw.ingress.kubernetes.io/backend-path-prefix: "/ratings/"
 spec:
   rules:
-  - host: {{ .Values.ingress.host }}
-    http:
-      paths:
-      - path: {{ .Values.ingress.path | default "/" }}
-        pathType: Prefix
-        backend:
+    - http:
+       paths:
+       - path: /ratings(/|$)(.*)
+         pathType: Prefix
+         backend:
           service:
-            name: {{ .Release.Name }}
-            port:
-              number: {{ .Values.ratings.port }}
+             name: bank-ratings-uat
+             port:
+              number: 8081
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   {{- if .Values.ingress.annotations }}
+#   annotations:
+#   {{- range $key, $value := .Values.ingress.annotations }}
+#     {{ $key }}: {{ $value | quote }}
+#   {{- end }}
+#   {{- end }}
+#   name: {{ .Release.Name }}
+#   namespace: {{ .Values.ratings.namespace }}
+# spec:
+#   rules:
+#   - host: {{ .Values.ingress.host }}
+#     http:
+#       paths:
+#       - path: {{ .Values.ingress.path | default "/" }}
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: {{ .Release.Name }}
+#             port:
+#               number: {{ .Values.ratings.port }}
