[Change] path name in rating-ingress from /ratings/ to /bank/ratings/

--- a/k8s/helm-values/values-bookinfo-dev-ratings.yaml
+++ b/k8s/helm-values/values-bookinfo-dev-ratings.yaml
@@ -1,5 +1,5 @@
 ratings:
-  namespace: student108-bookinfo-dev
+  namespace: bank-bookinfo-dev
   image: ghcr.io/bankhubjar/bookinfo-ratings
   tag: dev
   replicas: 1
