--- a/k8s/helm-values/values-bookinfo-uat-ratings.yaml
+++ b/k8s/helm-values/values-bookinfo-uat-ratings.yaml
@@ -1,5 +1,5 @@
 ratings:
-  namespace: student108-bookinfo-uat
+  namespace: bank-bookinfo-uat
   image: ghcr.io/bankhubjar/bookinfo-ratings
   tag: uat
   replicas: 1
