--- a/k8s/helm/templates/ratings-ingress.yaml
+++ b/k8s/helm/templates/ratings-ingress.yaml
@@ -7,18 +7,18 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     kubernetes.io/ingress.class: azure/application-gateway
     appgw.ingress.kubernetes.io/health-probe-path: "/health"
-    appgw.ingress.kubernetes.io/backend-path-prefix: "/ratings/"
+    appgw.ingress.kubernetes.io/backend-path-prefix: "/bank-ratings/"
 spec:
   rules:
     - http:
        paths:
-       - path: /ratings(/|$)(.*)
+       - path: /bank-ratings(/|$)(.*)
          pathType: Prefix
          backend:
           service:
-             name: bank-ratings-uat
+             name: {{ .Release.Name }}
              port:
-              number: 8081
+              number: {{ .Values.ratings.port }}
 # apiVersion: networking.k8s.io/v1
 # kind: Ingress
 # metadata:
