--- a/k8s/helm/templates/ratings-ingress.yaml
+++ b/k8s/helm/templates/ratings-ingress.yaml
@@ -5,8 +5,6 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-    appgw.ingress.kubernetes.io/health-probe-path: "/health"
-    appgw.ingress.kubernetes.io/backend-path-prefix: "/bankratings/"
 spec:
   rules:
     - http:
@@ -14,30 +12,5 @@ spec:
        - path: /bankratings(/|$)(.*)
          pathType: Prefix
          backend:
-          service:
-             name: {{ .Release.Name }}
-             port:
-              number: {{ .Values.ratings.port }}
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   {{- if .Values.ingress.annotations }}
-#   annotations:
-#   {{- range $key, $value := .Values.ingress.annotations }}
-#     {{ $key }}: {{ $value | quote }}
-#   {{- end }}
-#   {{- end }}
-#   name: {{ .Release.Name }}
-#   namespace: {{ .Values.ratings.namespace }}
-# spec:
-#   rules:
-#   - host: {{ .Values.ingress.host }}
-#     http:
-#       paths:
-#       - path: {{ .Values.ingress.path | default "/" }}
-#         pathType: Prefix
-#         backend:
-#           service:
-#             name: {{ .Release.Name }}
-#             port:
-#               number: {{ .Values.ratings.port }}
+          serviceName: {{ .Release.Name }}
+          servicePort: {{ .Values.ratings.port }}
