--- a/k8s/helm/templates/ratings-service.yaml
+++ b/k8s/helm/templates/ratings-service.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   type: {{ .Values.ingress.serviceType }}
   ports:
-  - port: {{ .Values.ratings.port }}
+  - protocol: TCP
+    port: {{ .Values.ratings.port }}
   selector:
     app: {{ .Release.Name }}
