--- a/k8s/helm/templates/ratings-ingress.yaml
+++ b/k8s/helm/templates/ratings-ingress.yaml
@@ -1,16 +1,20 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: bookinfo-ratings-bank
+  {{- if .Values.ingress.annotations }}
   annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+  {{- range $key, $value := .Values.ingress.annotations }}
+    {{ $key }}: {{ $value | quote }}
+  {{- end }}
+  {{- end }}
+  name: {{ .Release.Name }}
+  namespace: {{ .Values.details.namespace }}
 spec:
   rules:
-    - host: hellodolphin.in.th
+    - host: {{ .Values.ingress.host }}
       http:
         paths:
-        - path: /bank(/|$)(.*)
+        - path: {{ .Values.ingress.path | default "/" }}
           pathType: Prefix
           backend:
             serviceName: {{ .Release.Name }}
