--- a/k8s/helm/templates/ratings-ingress.yaml
+++ b/k8s/helm/templates/ratings-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
   {{- end }}
   {{- end }}
   name: {{ .Release.Name }}
-  namespace: {{ .Values.details.namespace }}
+  namespace: {{ .Values.ratings.namespace }}
 spec:
   rules:
     - host: {{ .Values.ingress.host }}
