--- a/k8s/helm-values/values-bookinfo-uat-ratings.yaml
+++ b/k8s/helm-values/values-bookinfo-uat-ratings.yaml
@@ -18,4 +18,7 @@ ingress:
   serviceType: ClusterIP
 extraEnv:
   SERVICE_VERSION: v2
-  MONGO_DB_URL: mongodb://bookinfo-uat-ratings-mongodb:27017/ratings
+  MONGO_DB_URL: mongodb://bookinfo-uat-ratings-mongodb:27017/?authSource=ratings
+  MONGO_DB_NAME: ratings-uat
+  MONGO_DB_USERNAME: ratings-uat
+  COMMIT_Id: CHANGEME
