delete tag from database

--- a/k8s/helm-values/values-bookinfo-prd-ratings.yaml
+++ b/k8s/helm-values/values-bookinfo-prd-ratings.yaml
@@ -19,6 +19,6 @@ ingress:
 extraEnv:
   SERVICE_VERSION: v2
   MONGO_DB_URL: mongodb://bookinfo-prd-ratings-mongodb:27017/?authSource=ratings
-  MONGO_DB_NAME: ratings-prd
-  MONGO_DB_USERNAME: ratings-prd
+  MONGO_DB_NAME: ratings
+  MONGO_DB_USERNAME: ratings
   COMMIT_Id: CHANGEME
